--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/assets/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <a href="https://storyset.com/office"></a>
-    <title>SanaVita</title>
+    <title>CheckSaúde</title>
   </head>
   <body>
     <div id="root"></div>
